--- a/app/src/main/res/layout/fragments.xml
+++ b/app/src/main/res/layout/fragments.xml
@@ -39,4 +39,12 @@
     android:layout_width="200dp"
     android:layout_height="365dp">
 </fragment>
+    <fragment
+        android:id="@+id/back"
+        android:name="com.example.myasyncthread.BackButton"
+        android:layout_margin="10dp"
+        android:layout_width="70dp"
+        android:layout_height="50dp">
+
+    </fragment>
 </RelativeLayout>
